--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
     display: flex;
     padding: 10px;
     background: rgb(100, 100, 100);
+    z-index: 1;
 }
 
 .header {
@@ -71,12 +72,20 @@
 }
 
 .temp {
-    background: lightgray;
+    background: #8f8f8f;
     padding: 3px 10px;
     font-size: 12px;
     margin: auto;
     white-space: nowrap;
     cursor: pointer;
+}
+
+.temp:not(.active):hover {
+    background: #999999;
+}
+
+.temp.active {
+    background: lightgray;
 }
 
 .temp:first-child {
@@ -90,6 +99,8 @@
 }
 
 .main {
+    display: flex;
+    flex-direction: column;
     flex: 1;
     margin: 5% 5% 0 5%;
 }
@@ -101,27 +112,90 @@
     margin: auto;
 }
 
+.info-heading {
+    text-align: center;
+    padding: 10px;
+    background: aliceblue;
+}
+
+.city-wrapper {
+    font-size: 32px;
+}
+
+.city-wrapper::after {
+    content: "";
+    display: block;
+    height: 1px;
+    width: 100px;
+    background: #c9c9c9;
+    margin: 3px auto 10px auto;
+}
+
 .location-wrapper {
     display: flex;
 }
 
 .map {
     height: fit-content;
-    width: 100%;
+    margin: auto;
+    z-index: 0;
 }
 
 #map {
-    height: 180px;
+    width: 500px;
+    height: 250px;
+}
+
+.loading {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    gap: 10px;
+    width: 100%;
+    height: 100%;
+    background: #00000075;
+}
+
+.loader {
+    -webkit-animation: spin 500ms linear infinite;
+    -moz-animation: spin 500ms linear infinite;
+    animation: spin 500ms linear infinite;
 }
 
 footer {
     text-align: center;
-    margin: 10px 0;
+    padding: 10px 0;
+    background: rgb(100, 100, 100);
+    color: white;
+    z-index: 1;
 }
 
 footer a {
     vertical-align: middle;
-    color: black;
+    color: white;
+}
+
+.hidden {
+    display: none;
+}
+
+@-moz-keyframes spin {
+    100% {
+        -moz-transform: rotate(360deg);
+    }
+}
+@-webkit-keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+@keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
 
 @media only screen and (max-width: 740px) {
